peac_dev/force-app/main/default/objects/Contract__c/fields/Date_BKY_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_BKY_Filed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date BKY Filed</label>
    <type>Date</type>
</CustomField>