peac_dev/force-app/main/default/objects/Contract__c/fields/Date_of_Judgement__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Judgement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Judgement</label>
    <type>Date</type>
</CustomField>