peac_dev/force-app/main/default/objects/Contract__c/fields/Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due__c</fullName>
    <formula>TODAY() - Paid_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>