peac_dev/force-app/main/default/objects/Contract__c/fields/Days_since_Last_Payment__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Last_Payment__c</fullName>
    <formula>TODAY() - Last_Payment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Last Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>