peac_dev/force-app/main/default/objects/Contract__c/fields/DD_Language__c.field-meta.xml
<CustomField>
    <fullName>DD_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DD Language</label>
    <type>Checkbox</type>
</CustomField>