peac_dev/force-app/main/default/objects/Contract__c/fields/DD_Language_Verified__c.field-meta.xml
<CustomField>
    <fullName>DD_Language_Verified__c</fullName>
    <description>SL-1973</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DD Language Verified</label>
    <type>Date</type>
</CustomField>