peac_dev/force-app/main/default/objects/Contract__c/fields/Dealer_Account__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account related to the Partner user who created the Opportunity through the Dealer Portal</description>
    <label>Dealer Account (Do Not Use)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Dealer Account)</relationshipLabel>
    <relationshipName>DealerAccount_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>