peac_dev/force-app/main/default/objects/Contract__c/fields/Dealer_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Group_Code__c</fullName>
    <formula>Dealer_Name__r.Dealer_Group_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Group Code</label>
    <type>Text</type>
</CustomField>