peac_dev/force-app/main/default/objects/Contract__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker Account</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer Account</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Franchisor Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Dealer Name)</relationshipLabel>
    <relationshipName>Custom_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>