peac_dev/force-app/main/default/objects/Contract__c/fields/Dealer_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Number__c</fullName>
    <description>Get the Dealer Number from Dealer Account</description>
    <formula>Dealer_Name__r.Dealer_Number__c</formula>
    <label>Dealer Number</label>
    <type>Text</type>
</CustomField>