peac_dev/force-app/main/default/objects/Contract__c/fields/Dealer_Recommended_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Recommended_Warehouse__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Recommended Warehouse</label>
    <length>80</length>
    <type>Text</type>
</CustomField>