peac_dev/force-app/main/default/objects/Contract__c/fields/Dealer_User__c.field-meta.xml
<CustomField>
    <fullName>Dealer_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>user that created the Opportunity through the Dealer Portal</description>
    <label>Dealer User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DealerUser_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>