peac_dev/force-app/main/default/objects/Contract__c/fields/Deferred_Interest_Income__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Interest_Income__c</fullName>
    <label>Deferred Interest Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>