peac_dev/force-app/main/default/objects/Contract__c/fields/Delinquency_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Status_Code__c</fullName>
    <label>Delinquency Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>Not delinquent</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Past due 01 - 30 days</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Past due 31 - 60 days</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>Past due 61 - 90 days</label>
            </value>
            <value>
                <fullName>91</fullName>
                <label>Past due 91 - 120 days</label>
            </value>
            <value>
                <fullName>121</fullName>
                <label>Past due 121 - 150 days</label>
            </value>
            <value>
                <fullName>151</fullName>
                <label>Past due 151 - 180 days</label>
            </value>
            <value>
                <fullName>181</fullName>
                <label>Past due 181 days and more</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>