peac_dev/force-app/main/default/objects/Contract__c/fields/Demand_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Demand_Letter_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Demand Letter Sent</label>
    <type>Date</type>
</CustomField>