peac_dev/force-app/main/default/objects/Contract__c/fields/Dialer_Report__c.field-meta.xml
<CustomField>
    <fullName>Dialer_Report__c</fullName>
    <formula>AND(NOT(Remove_from_Dialer__c),
       NOT(Payment_Arrangement__c),
       RecordType.Name = &apos;Lease&apos;,
       OR(ISBLANK(Hold_from_Dialer_Until__c), Hold_from_Dialer_Until__c &lt;= TODAY() ),
       ISBLANK(RA_Issued__c) )</formula>
    <label>Dialer Report</label>
    <type>Checkbox</type>
</CustomField>