peac_dev/force-app/main/default/objects/Contract__c/fields/Disposal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Disposal Reason</label>
    <type>TextArea</type>
</CustomField>