peac_dev/force-app/main/default/objects/Contract__c/fields/Disposed_Date__c.field-meta.xml
<CustomField>
    <fullName>Disposed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Disposed Date</label>
    <type>Date</type>
</CustomField>