peac_dev/force-app/main/default/objects/Contract__c/fields/Disposition_Suspense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Suspense_Amount__c</fullName>
    <label>Disposition Suspense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>