peac_dev/force-app/main/default/objects/Contract__c/fields/DocGen_Formula__c.field-meta.xml
<CustomField>
    <fullName>DocGen_Formula__c</fullName>
    <formula>IF( Is_Blind__c = TRUE, &quot;Blind&quot; , 
   IF(IsXBS__c = TRUE, &quot;XBS&quot;, 
   &quot;0&quot;))</formula>
    <label>DocGen Formula</label>
    <type>Text</type>
</CustomField>