peac_dev/force-app/main/default/objects/Contract__c/fields/DP_Buyout_Total__c.field-meta.xml
<CustomField>
    <fullName>DP_Buyout_Total__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DP Buyout Total</label>
    <length>20</length>
    <type>Text</type>
</CustomField>