peac_dev/force-app/main/default/objects/Contract__c/fields/DP_Trade_Up_to_Return_Total__c.field-meta.xml
<CustomField>
    <fullName>DP_Trade_Up_to_Return_Total__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DP Trade Up to Return Total</label>
    <length>20</length>
    <type>Text</type>
</CustomField>