peac_dev/force-app/main/default/objects/Contract__c/fields/Due_Day__c.field-meta.xml
<CustomField>
    <fullName>Due_Day__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoicing Due Day</label>
    <length>80</length>
    <type>Text</type>
</CustomField>