peac_dev/force-app/main/default/objects/Contract__c/fields/EFT_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EFT_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EFT Start Date</label>
    <type>Date</type>
</CustomField>