peac_dev/force-app/main/default/objects/Contract__c/fields/End_of_term_form_sent__c.field-meta.xml
<CustomField>
    <fullName>End_of_term_form_sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End of Term Form Sent</label>
    <type>Date</type>
</CustomField>