peac_dev/force-app/main/default/objects/Contract__c/fields/End_of_Term_RA_Sent__c.field-meta.xml
<CustomField>
    <fullName>End_of_Term_RA_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End of Term RA Sent</label>
    <type>Date</type>
</CustomField>