peac_dev/force-app/main/default/objects/Contract__c/fields/End_of_Term_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>End_of_Term_Warehouse__c</fullName>
    <label>End of Term Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALS CA</fullName>
            </value>
            <value>
                <fullName>Copex NC</fullName>
            </value>
            <value>
                <fullName>Copex RI</fullName>
            </value>
            <value>
                <fullName>EBU CA</fullName>
            </value>
            <value>
                <fullName>Mars International CA</fullName>
            </value>
            <value>
                <fullName>Mars International IL</fullName>
            </value>
            <value>
                <fullName>Mars International NJ</fullName>
            </value>
            <value>
                <fullName>Midwest CA</fullName>
            </value>
            <value>
                <fullName>Midwest CO</fullName>
            </value>
            <value>
                <fullName>Midwest IL</fullName>
            </value>
            <value>
                <fullName>Midwest OH</fullName>
            </value>
            <value>
                <fullName>Nevill</fullName>
            </value>
            <value>
                <fullName>Omni Capital</fullName>
            </value>
            <value>
                <fullName>RSI CT</fullName>
            </value>
            <value>
                <fullName>RSI FL</fullName>
            </value>
            <value>
                <fullName>RSI SC</fullName>
            </value>
            <value>
                <fullName>RSI TN</fullName>
            </value>
            <value>
                <fullName>RSI TX</fullName>
            </value>
            <value>
                <fullName>Wulff Enterprises GA</fullName>
            </value>
            <value>
                <fullName>Wulff Enterprises OH</fullName>
            </value>
            <value>
                <fullName>EBU FL</fullName>
                <isActive>false</isActive>
                <label>EBU FL</label>
            </value>
            <value>
                <fullName>EBU TX</fullName>
                <isActive>false</isActive>
                <label>EBU TX</label>
            </value>
            <value>
                <fullName>Northbay Networks</fullName>
                <isActive>false</isActive>
                <label>Northbay Networks</label>
            </value>
            <value>
                <fullName>RSI GA</fullName>
                <isActive>false</isActive>
                <label>RSI GA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>