peac_dev/force-app/main/default/objects/Contract__c/fields/EOT_RA_sent__c.field-meta.xml
<CustomField>
    <fullName>EOT_RA_sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EOT RA sent</label>
    <type>Date</type>
</CustomField>