peac_dev/force-app/main/default/objects/Contract__c/fields/Equipment_CostPurchase_Option__c.field-meta.xml
<CustomField>
    <fullName>Equipment_CostPurchase_Option__c</fullName>
    <label>Equipment Cost/Purchase Option</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>