peac_dev/force-app/main/default/objects/Contract__c/fields/Equipment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Received Date</label>
    <type>Date</type>
</CustomField>