peac_dev/force-app/main/default/objects/Contract__c/fields/Equipment_sold__c.field-meta.xml
<CustomField>
    <fullName>Equipment_sold__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Sold</label>
    <type>Date</type>
</CustomField>