peac_dev/force-app/main/default/objects/Contract__c/fields/Extended_Insurance_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Extended_Insurance_Invoice_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extended Insurance Invoice Date</label>
    <type>Date</type>
</CustomField>