peac_dev/force-app/main/default/objects/Contract__c/fields/Extended_Insurance_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Extended_Insurance_Invoice_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extended Insurance Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>