peac_dev/force-app/main/default/objects/Contract__c/fields/Extended_Insurance_Invoice_Tax__c.field-meta.xml
<CustomField>
    <fullName>Extended_Insurance_Invoice_Tax__c</fullName>
    <label>Extended Insurance Invoice Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>