peac_dev/force-app/main/default/objects/Contract__c/fields/Extended_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Extended_Maturity_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extended Maturity Date</label>
    <type>Date</type>
</CustomField>