peac_dev/force-app/main/default/objects/Contract__c/fields/External_Collection_Agency__c.field-meta.xml
<CustomField>
    <fullName>External_Collection_Agency__c</fullName>
    <description>External collection agency</description>
    <label>External Collection Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARS</fullName>
            </value>
            <value>
                <fullName>Monarch</fullName>
            </value>
            <value>
                <fullName>Schuerger</fullName>
            </value>
            <value>
                <fullName>Lyon Credit Services</fullName>
            </value>
            <value>
                <fullName>JSD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>