peac_dev/force-app/main/default/objects/Contract__c/fields/External_Collection_Agency_Phone__c.field-meta.xml
<CustomField>
    <fullName>External_Collection_Agency_Phone__c</fullName>
    <formula>CASE( Text(External_Collection_Agency__c) ,
&apos;ARS&apos;, &apos;610-354-0990&apos;,
&apos;Monarch&apos;, &apos;267-270-3905&apos;,
&apos;Lyon Credit Services&apos;, &apos;212-967-6767&apos;,
&apos;JSD&apos;, &apos;800-305-0773&apos;,
&apos;Schuerger&apos;, &apos;614-824-5731&apos;, Text(External_Collection_Agency__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Collection Agency Phone</label>
    <type>Text</type>
</CustomField>