peac_dev/force-app/main/default/objects/Contract__c/fields/Facility_Code__c.field-meta.xml
<CustomField>
    <fullName>Facility_Code__c</fullName>
    <label>Facility Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2.99</fullName>
                <label>VARADERO</label>
            </value>
            <value>
                <fullName>2.01</fullName>
                <label>Wells Syndication</label>
            </value>
            <value>
                <fullName>2.02</fullName>
                <label>US Bank Syndication</label>
            </value>
            <value>
                <fullName>2.03</fullName>
                <label>CIT Syndication</label>
            </value>
            <value>
                <fullName>2.04</fullName>
                <label>Unifi (Perfect Pay)</label>
            </value>
            <value>
                <fullName>2.05</fullName>
                <label>Bank of West</label>
            </value>
            <value>
                <fullName>2.06</fullName>
                <label>Unifi (Reg Pay)</label>
            </value>
            <value>
                <fullName>2.24</fullName>
                <label>Crestmark</label>
            </value>
            <value>
                <fullName>2.25</fullName>
                <label>Hitachi Capital</label>
            </value>
            <value>
                <fullName>2.26</fullName>
                <label>BB&amp;T</label>
            </value>
            <value>
                <fullName>2.27</fullName>
                <label>TCF Bank</label>
            </value>
            <value>
                <fullName>9.00</fullName>
                <label>Ineligible-Pending Review</label>
            </value>
            <value>
                <fullName>9.01</fullName>
                <label>Ineligible-Do Not Pledge</label>
            </value>
            <value>
                <fullName>9.02</fullName>
                <label>Restructure</label>
            </value>
            <value>
                <fullName>9.03</fullName>
                <label>Sec Rejected-Lease Alter</label>
            </value>
            <value>
                <fullName>9.04</fullName>
                <label>Sec-Need origs from bank</label>
            </value>
            <value>
                <fullName>9.05</fullName>
                <label>Ineligible-No Lease Doc</label>
            </value>
            <value>
                <fullName>9.06</fullName>
                <label>INELIGIBLE STL/NEED D &amp; A</label>
            </value>
            <value>
                <fullName>9.07</fullName>
                <label>QUESTIONABLE TERMS</label>
            </value>
            <value>
                <fullName>9.09</fullName>
                <label>SALES REC&apos;D ORIG-MIA</label>
            </value>
            <value>
                <fullName>9.10</fullName>
                <label>INELIGIBLE-NEED ORIG LSE</label>
            </value>
            <value>
                <fullName>9.11</fullName>
                <label>INELIGIBLE-NEED D &amp; A</label>
            </value>
            <value>
                <fullName>9.12</fullName>
                <label>INELIGIBLE-NEED ADDENDUM</label>
            </value>
            <value>
                <fullName>9.13</fullName>
                <label>INELIGIBLE-NEED ASSIGN</label>
            </value>
            <value>
                <fullName>9.14</fullName>
                <label>INELIGIBLE-RET ORIG/SIGN</label>
            </value>
            <value>
                <fullName>9.15</fullName>
                <label>INELIGIBLE-PROG PAYT BKED</label>
            </value>
            <value>
                <fullName>9.16</fullName>
                <label>BOOKING ERROR</label>
            </value>
            <value>
                <fullName>9.17</fullName>
                <label>BANK EXCEPTION</label>
            </value>
            <value>
                <fullName>9.18</fullName>
                <label>INELIGIBLE-NEED SIGNATURE</label>
            </value>
            <value>
                <fullName>9.19</fullName>
                <label>BOOKED NOT PAID</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>