peac_dev/force-app/main/default/objects/Contract__c/fields/Fed_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Fed_Tax_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fed Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>