peac_dev/force-app/main/default/objects/Contract__c/fields/Filing_Fees__c.field-meta.xml
<CustomField>
    <fullName>Filing_Fees__c</fullName>
    <label>Filing Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>