peac_dev/force-app/main/default/objects/Contract__c/fields/First_Fee_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Fee_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Fee Date</label>
    <type>Date</type>
</CustomField>