peac_dev/force-app/main/default/objects/Contract__c/fields/First_Payment_Default__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Payment Default</label>
    <type>Checkbox</type>
</CustomField>