peac_dev/force-app/main/default/objects/Contract__c/fields/Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Date__c</fullName>
    <description>Follow up date field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>