peac_dev/force-app/main/default/objects/Contract__c/fields/Fund_and_Follow__c.field-meta.xml
<CustomField>
    <fullName>Fund_and_Follow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fund and Follow</label>
    <type>Checkbox</type>
</CustomField>