peac_dev/force-app/main/default/objects/Contract__c/fields/Fund_and_Follow_Comments__c.field-meta.xml
<CustomField>
    <fullName>Fund_and_Follow_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fund and Follow Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>