peac_dev/force-app/main/default/objects/Contract__c/fields/Gross_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Contract_Amount__c</fullName>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>