peac_dev/force-app/main/default/objects/Contract__c/fields/Gross_Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Gross_Equipment_Cost__c</fullName>
    <label>Gross Equipment Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>