peac_dev/force-app/main/default/objects/Contract__c/fields/Gross_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Gross_Renewal__c</fullName>
    <label>Gross Renewal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>