peac_dev/force-app/main/default/objects/Contract__c/fields/Hold_from_Dialer_Until__c.field-meta.xml
<CustomField>
    <fullName>Hold_from_Dialer_Until__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hold from Dialer Until</label>
    <type>Date</type>
</CustomField>