peac_dev/force-app/main/default/objects/Contract__c/fields/Initial_Direct_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Direct_Cost_Amount__c</fullName>
    <label>Initial Direct Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>