peac_dev/force-app/main/default/objects/Contract__c/fields/Initial_Direct_Cost_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Direct_Cost_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Direct Cost Date</label>
    <type>Date</type>
</CustomField>