peac_dev/force-app/main/default/objects/Contract__c/fields/Initial_Direct_Cost_Description__c.field-meta.xml
<CustomField>
    <fullName>Initial_Direct_Cost_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Direct Cost Description</label>
    <type>TextArea</type>
</CustomField>