peac_dev/force-app/main/default/objects/Contract__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance</label>
    <referenceTo>Insurance__c</referenceTo>
    <relationshipName>Custom_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>