peac_dev/force-app/main/default/objects/Contract__c/fields/Insurance_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiration_Date__c</fullName>
    <formula>Insurance__r.Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Expiration Date</label>
    <type>Date</type>
</CustomField>