peac_dev/force-app/main/default/objects/Contract__c/fields/Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Status__c</fullName>
    <label>Insurance Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Infolease_Environment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Outside coverage</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Marlin program</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Reinstated</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Voided-No Coverage</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Non-Solicitable</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Cancel Nonpay</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Disposed</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Self Insured</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>NOT REQUIRED</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Sale</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Ins through Unifi</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Pending Auto</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Outside Ins Auto</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>In-House TV</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Reinstated TV</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>CANCELED NON PAYMENT</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>TV- Not Required</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>InsCanc-Delinq</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>TV-Disposed</label>
            </value>
            <value>
                <fullName>83</fullName>
                <label>Ext-2 Year</label>
            </value>
            <value>
                <fullName>91</fullName>
                <label>Sol Not Owned</label>
            </value>
            <value>
                <fullName>93</fullName>
                <label>Ext-Year 1</label>
            </value>
            <value>
                <fullName>94</fullName>
                <label>Does not want</label>
            </value>
            <value>
                <fullName>95</fullName>
                <label>Canceled-no response</label>
            </value>
            <value>
                <fullName>97</fullName>
                <label>Cancel Pro Rated</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>Cancel Non Renewal</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Can-NoRsp-Y2</label>
            </value>
            <value>
                <fullName>1A</fullName>
                <label>Pending - New</label>
            </value>
            <value>
                <fullName>3A</fullName>
                <label>Request Reissue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>