peac_dev/force-app/main/default/objects/Contract__c/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <label>Intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keep</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Continue Renewal Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>